test: validate BIDS schema against metaschema with `check-jsonschema`

--- a/tools/schemacode/pyproject.toml
+++ b/tools/schemacode/pyproject.toml
@@ -37,6 +37,7 @@ render = [
 ]
 tests = [
     "bidsschematools[expressions,render]",
+    "check-jsonschema",
     "codecov",
     "coverage[toml]",
     "flake8",
