--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -216,8 +216,7 @@ AverageCalibrationError:
   name: AverageCalibrationError
   display_name: Average Calibration Error
   description: |
-    Average calibration error in degrees of visual angle. If both eyes recorded,
-    first array corresponds to the left eye and the second to the right eye.
+    Average calibration error in degrees of visual angle.
   type: number
   unit: degree
 B0FieldIdentifier:
