[ENH] Formalize presence of optional docs/ folder
Inspired by the success of the
https://github.com/bids-standard/bids-specification/pull/1962 adding
formalization of `logs/` folder, and triggered by the use-case in DANDI
https://github.com/dandi/dandi-docs/pull/200 seeking to add more elaborate
descriptions to the README (or more specifically README.md), I would like to
propose adding any extra documentation and associated artwork (images, videos,
etc) under `docs/` folder.  I do not think it is worth breaking down more (as
videos/) etc, since it could confuse with data types (videos of behavior or
alike).

Not sure if we would want to formalize inner structure anyhow. We could
potentially recommend using `docs/images/` subfolder for images.

Then README.md on top level could potentially use those images via
references to `docs/` paths.

--- a/src/schema/rules/directories.yaml
+++ b/src/schema/rules/directories.yaml
@@ -34,6 +34,10 @@ raw:
     name: derivatives
     level: optional
     opaque: true
+  docs:
+    name: docs
+    level: optional
+    opaque: true
   logs:
     name: logs
     level: optional
