--- a/src/schema/rules/files/common/core.yaml
+++ b/src/schema/rules/files/common/core.yaml
@@ -36,6 +36,9 @@ code:
 derivatives:
   level: optional
   path: derivatives
+docs:
+  level: optional
+  path: docs
 logs:
   level: optional
   path: logs
