--- a/src/schema/rules/files/raw/stimuli.yaml
+++ b/src/schema/rules/files/raw/stimuli.yaml
@@ -8,6 +8,7 @@ stimuli_table:
   extensions:
     - .json
     - .tsv
+  entities: {} # No entities apply to the stimuli.tsv/json index files themselves
 
 annotations_table:
   level: recommended
@@ -17,6 +18,8 @@ annotations_table:
   extensions:
     - .json
     - .tsv
+  entities:
+    stimulus: optional # The annotations table can be global or stimulus-specific
 
 stimulus_audio:
   level: optional
@@ -79,7 +82,7 @@ stimulus_audiovideo:
     stimulus: required
     part: optional
 
-stimulus_annotations:
+stimulus_annotations_events: # Renamed for clarity, representing the annot-<label>_events files
   level: optional
   path: stimuli
   suffixes:
