--- a/tools/schemacode/pyproject.toml
+++ b/tools/schemacode/pyproject.toml
@@ -1,34 +1,94 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=61.2"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "bidsschematools"
+description = "Python tools for working with the BIDS schema."
+authors = [{name = "bids-standard developers"}]
+maintainers = [{name = "bids-standard developers", email = "bids.maintenance@gmail.com"}]
+license = {text = "MIT"}
+readme = "README.md"
+requires-python = ">=3.8"
+dependencies = [
+    "click",
+    "pyyaml",
+    'importlib_resources; python_version < "3.9"',
+    "jsonschema",
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Science/Research",
+    "Topic :: Scientific/Engineering :: Information Analysis",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
+dynamic = ["version"]
+
+[project.optional-dependencies]
+doc = [
+    "sphinx>=1.5.3",
+    "sphinx_rtd_theme",
+]
+render = [
+    "tabulate",
+    "pandas",
+    "markdown-it-py",
+]
+expressions = ["pyparsing"]
+tests = [
+    "codecov",
+    "coverage[toml]",
+    "flake8",
+    "flake8-black",
+    "flake8-isort",
+    "pytest",
+    "pytest-cov",
+]
+all = [
+    "bidsschematools[doc,render,tests,expressions]",
+]
+
+[project.scripts]
+bst = "bidsschematools.__main__:cli"
+
+[project.urls]
+Homepage = "https://github.com/bids-standard/bids-specification"
+
+[tool.setuptools.package-data]
+bidsschematools = [
+    "data/metaschema.json",
+    "data/schema.json",
+    "data/schema/BIDS_VERSION",
+    "data/schema/SCHEMA_VERSION",
+    "data/schema/**/*.yaml",
+    "tests/data/*",
+]
+
+[tool.setuptools.dynamic]
+version = {file = ["src/bidsschematools/data/schema/SCHEMA_VERSION"]}
 
 [tool.black]
 line-length = 99
-target-version = ['py37']
 include = '\.pyi?$'
-exclude = '''
-(
-  /(
-      \.eggs         # exclude a few common directories in the
-    | \.git          # root of the project
-    | \.github
-    | \.hg
-    | \.pytest_cache
-    | _build
-    | build
-    | dist
-  )/
-)
-'''
 
 [tool.isort]
 profile = "black"
 multi_line_output = 3
 
 [tool.pytest.ini_options]
+addopts = "-ra --strict-markers --strict-config"
+log_cli = true
+log_cli_level = "INFO"
 markers = [
   "validate_schema: tests that validate the schema itself",
 ]
+minversion = "6.0"
+xfail_strict = true
+
 
 [tool.coverage.paths]
 source = [
