rf: Use acres data loader uniformly

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -72,6 +72,7 @@ repos:
       - id: mypy
         # Sync with project.optional-dependencies.typing
         additional_dependencies:
+          - acres
           - click
           - markdown-it-py
           - pandas-stubs
