--- a/src/schema/objects/common_principles.yaml
+++ b/src/schema/objects/common_principles.yaml
@@ -176,12 +176,6 @@ task:
 template:
   display_name: Template
   description: |
-    An average feature map obtained by aggregation of subjects and/or sessions that allows the
-    spatial location of brain anatomy and function of the templated cohort.
-    Templates operationalize the concept of *standardized spatial frame of analysis*,
-    a common *Space* in which subjects' data can be spatially-normalized into for group inference.
-    Like subjects' feature maps generate a *native* spatial frame of reference for analyses,
-    templates engender a *generic* or *standard* space of analysis were subjects can be spatiotemporally
-    aligned into.
-    In other words, *templates* (that is, specific feature maps) are *authoritative definitions* of *spaces*
-    in that they instantiate the abstract concept of *space*.
+    A template (also called *atlas template*) is any aggregation of data across subjects.
+    Templates MAY operationalize the notion of a common spatial frame of reference (see *space* below) beyond individual subjects.
+    In practical BIDS usage, templates CAN BE recognized (via the tpl- entity) as standard spaces that enable analyses of data from multiple individuals.
