Fix Mathieu Guay-Paquet name listing
Co-authored-by: Chris Markiewicz <effigies@gmail.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3409,7 +3409,7 @@
                 "doc"
             ],
             "login": "mguaypaq",
-            "name": "mathieu_guay-paquet"
+            "name": "Mathieu Guay-Paquet"
         },
         {
             "avatar_url": "https://avatars.githubusercontent.com/u/8000597?v=4",
