Restore Alexandre D'Astous to contributors list
This commit restores Alexandre D'Astous (GitHub user po09i) who was inadvertently
removed in commit e8b3f9378b345d2ff2040f2aba5d686fe2cafc49.

Added entries to contributors.md, .all-contributorsrc, and .tributors files.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -162,6 +162,13 @@
             "contributions": [
                 "doc"
             ],
+            "login": "po09i",
+            "name": "Alexandre D'Astous"
+        },
+        {
+            "contributions": [
+                "doc"
+            ],
             "login": "alexandre_hutton",
             "name": "Alexandre Hutton"
         },
