--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -37,13 +37,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3
-      - name: Install dependencies
-        run: pip install yamllint
+      - uses: actions/setup-uv@v6
       - name: Lint yml files in src/schema
-        run: yamllint -f standard src/schema/ -c .yamllint.yml
+        run: uvx yamllint -f standard src/schema/ -c .yamllint.yml
 
   # Python best practices
   python-style:
@@ -59,35 +55,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r tools/requirements.txt
-      - name: Run Python script to check for Latin phrases - Master
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        run: |
-          python no-bad-latin.py
-        working-directory: tools
-      - name: Run Python script to check for Latin phrases - Pull Request
-        if: github.event.pull_request
-        run: |
-          python no-bad-latin.py
-        working-directory: tools
+      - uses: actions/setup-uv@v6
+      - name: Check for Latin phrases
+        run: uv run tools/no-bad-latin.py
 
   # Validate CITATION.cff
   validate_cff:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: 3
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip setuptools
-        pip3 install cffconvert
-    - name: Validate CITATION.cff
-      run: make validate_citation_cff
+      - uses: actions/checkout@v4
+      - uses: actions/setup-uv@v6
+      - name: Validate CITATION.cff
+        run: uvx cffconvert --validate
