--- a/tools/schemacode/pyproject.toml
+++ b/tools/schemacode/pyproject.toml
@@ -144,6 +144,7 @@ select = [
     "Q",  # flake8-quotes
     "YTT",  # flake8-2020
     "ISC",  # implicit-string-concatenation
+    "UP",  # pyupgrade
 
     # Intend to evaluate these for inclusion
     # "PD",  # pandas-vet
